hamiltonian-nn/wandb/run-20250505_185849-x5ufr5y1/files/output.log
  0%|                                                                                                      | 0/5 [00:00<?, ?it/s][34m[1mwandb[0m: [32m[41mERROR[0m Error while calling W&B API: could not find agent stdid9d3 during agentHeartbeat (<Response [404]>)
Exception in thread Thread-8 (_heartbeat):
Traceback (most recent call last):
  File "C:\Users\aksha\OneDrive\Desktop\codes\CP\ET_Project\my_env\lib\site-packages\wandb\sdk\internal\internal_api.py", line 3194, in agent_heartbeat
    response = self.gql(
  File "C:\Users\aksha\OneDrive\Desktop\codes\CP\ET_Project\my_env\lib\site-packages\wandb\sdk\internal\internal_api.py", line 374, in gql
    ret = self._retry_gql(
  File "C:\Users\aksha\OneDrive\Desktop\codes\CP\ET_Project\my_env\lib\site-packages\wandb\sdk\lib\retry.py", line 134, in __call__
    result = self._call_fn(*args, **kwargs)
  File "C:\Users\aksha\OneDrive\Desktop\codes\CP\ET_Project\my_env\lib\site-packages\wandb\sdk\internal\internal_api.py", line 402, in execute
    return self.client.execute(*args, **kwargs)  # type: ignore
  File "C:\Users\aksha\OneDrive\Desktop\codes\CP\ET_Project\my_env\lib\site-packages\wandb\vendor\gql-0.2.0\wandb_gql\client.py", line 52, in execute
    result = self._get_result(document, *args, **kwargs)
  File "C:\Users\aksha\OneDrive\Desktop\codes\CP\ET_Project\my_env\lib\site-packages\wandb\vendor\gql-0.2.0\wandb_gql\client.py", line 60, in _get_result
    return self.transport.execute(document, *args, **kwargs)
  File "C:\Users\aksha\OneDrive\Desktop\codes\CP\ET_Project\my_env\lib\site-packages\wandb\sdk\lib\gql_request.py", line 59, in execute
    request.raise_for_status()
  File "C:\Users\aksha\OneDrive\Desktop\codes\CP\ET_Project\my_env\lib\site-packages\requests\models.py", line 1024, in raise_for_status
    raise HTTPError(http_error_msg, response=self)
requests.exceptions.HTTPError: 404 Client Error: Not Found for url: https://api.wandb.ai/graphql

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "C:\Users\aksha\AppData\Local\Programs\Python\Python310\lib\threading.py", line 1016, in _bootstrap_inner
    self.run()
  File "C:\Users\aksha\AppData\Local\Programs\Python\Python310\lib\threading.py", line 953, in run
    self._target(*self._args, **self._kwargs)
  File "C:\Users\aksha\OneDrive\Desktop\codes\CP\ET_Project\my_env\lib\site-packages\wandb\agents\pyagent.py", line 165, in _heartbeat
    commands = self._api.agent_heartbeat(self._agent_id, {}, run_status)
  File "C:\Users\aksha\OneDrive\Desktop\codes\CP\ET_Project\my_env\lib\site-packages\wandb\apis\internal.py", line 161, in agent_heartbeat
    return self.api.agent_heartbeat(*args, **kwargs)
  File "C:\Users\aksha\OneDrive\Desktop\codes\CP\ET_Project\my_env\lib\site-packages\wandb\sdk\internal\internal_api.py", line 3205, in agent_heartbeat
    message = ast.literal_eval(e.args[0])["message"]
  File "C:\Users\aksha\AppData\Local\Programs\Python\Python310\lib\ast.py", line 62, in literal_eval
    node_or_string = parse(node_or_string.lstrip(" \t"), mode='eval')
  File "C:\Users\aksha\AppData\Local\Programs\Python\Python310\lib\ast.py", line 50, in parse
    return compile(source, filename, mode, flags,
  File "<unknown>", line 1
    404 Client Error: Not Found for url: https://api.wandb.ai/graphql
        ^^^^^^
SyntaxError: invalid syntax
